@startuml

title __RD-MS-AUTHZ-CLIENT's Class Diagram__\n

  namespace io.radien.ms.authz.client {
    interface io.radien.ms.authz.client.TenantRoleClient {
    }
  }
  

  namespace io.radien.ms.authz.client {
    interface io.radien.ms.authz.client.UserClient {
    }
  }
  

  namespace io.radien.ms.authz.client {
    namespace exception {
      class io.radien.ms.authz.client.exception.ExceptionMapper {
      }
    }
  }
  

  namespace io.radien.ms.authz.client {
    namespace exception {
      class io.radien.ms.authz.client.exception.NotFoundException {
      }
    }
  }
  

  namespace io.radien.ms.authz.security {
    abstract class io.radien.ms.authz.security.AuthorizationChecker {
    }
  }
  

  namespace io.radien.ms.authz.util {
    interface io.radien.ms.authz.util.BiFunction {
    }
  }
  

  namespace io.radien.ms.authz.util {
    interface io.radien.ms.authz.util.Consumer {
    }
  }
  

  namespace io.radien.ms.authz.util {
    interface io.radien.ms.authz.util.Function {
    }
  }
  

  namespace io.radien.ms.authz.util {
    interface io.radien.ms.authz.util.FunctionReturn {
    }
  }
  

  io.radien.ms.authz.client.exception.ExceptionMapper .up.|> org.eclipse.microprofile.rest.client.ext.ResponseExceptionMapper
  io.radien.ms.authz.security.AuthorizationChecker .up.|> java.io.Serializable
  io.radien.ms.authz.security.AuthorizationChecker o-- io.radien.api.OAFAccess : oafAccess
  io.radien.ms.authz.security.AuthorizationChecker o-- io.radien.ms.authz.client.TenantRoleClient : tenantRoleClient
  io.radien.ms.authz.security.AuthorizationChecker o-- io.radien.api.security.TokensPlaceHolder : tokensPlaceHolder
  io.radien.ms.authz.security.AuthorizationChecker o-- io.radien.ms.authz.client.UserClient : userClient


 

@enduml
